--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -1,9 +1,20 @@
+/* Flex */
+/* Parent */
+.flex_container {
+	/*display: flex;*/
+}
+
+/* Child */
+.flex_item {
+
+}
+
+/* Styles */
 * {
 	margin: 0;
 	padding: 0;
 	font-family: 'Palatino';
 }
-
 body {
 	background-size: cover;
 	height: 100vh;
@@ -12,12 +23,10 @@ body {
 	background-image: url('https://media.giphy.com/media/NU9hqIw9vN0fm/giphy.gif');
 }
 form {
-
 	opacity: .9;
 }
-#editProduct_form{
-height: 350px;
-
+#editProduct_form {
+	height: 350px;
 }
 	#navbar_item:last-child {
 	border-right: none;
@@ -33,16 +42,13 @@ height: 350px;
   	-o-transition: all 0.5s ease;
   	-ms-transition: all 0.5s ease;
   	transition: all 0.5s ease;
-}
- 
+} 
 #navbar_item, footer a:hover {
 	color: #666;
 }
- 
 #navbar_item.active, footer a {
 	color: #03465C;
 }
-
 #navbar_item {
 	height: 25px;
  	float: left;
@@ -50,23 +56,19 @@ height: 350px;
 	border-right: 1px solid #03465C;
 	padding: 0 20px;
 }
-
 ul, li, .navbar_list {
 	list-style: none;
 }
-
 nav, footer {
 	height: 18px;
 	border-radius: 5px;
 	padding: 12px;
 	margin: 50px;
 }
-
 footer {
 	position: fixed;  
 	bottom: 0px;
 }
-
 form {
 	width: 285px;
 	height: 425px;
@@ -88,14 +90,14 @@ form {
 	border-radius: 8px;
 	font-size: 20px;
 }
+#form_container_login {
+	height: 280px;
+}
 
-#new_product_form {
+#form_container_new {
 	height: 360px;
 }
 
-#login_form {
-	height: 280px;
-}
 input {
 	display: block;
 	margin-top: 15px;
@@ -106,36 +108,30 @@ input {
 	padding: 4px;
 	width: 240px;
 	background: rgba(212,228,239,1);
-	background: -moz-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
 	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(212,228,239,1)), color-stop(35%, rgba(212,228,239,1)), color-stop(100%, rgba(134,174,204,1)));
 	background: -webkit-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
-	background: -o-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
-	background: -ms-linear-gradient(top, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
-	background: linear-gradient(to bottom, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
+	background: linear-gradient(top, bottom, rgba(212,228,239,1) 0%, rgba(212,228,239,1) 35%, rgba(134,174,204,1) 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d4e4ef', endColorstr='#86aecc', GradientType=0 );
 }
-
-
 img {
 	height: 200px;
 	width: 250px;
 }
-
 a, h1 {
 	text-decoration: none;
 	color: #03465C;
 }
-
 a:hover {
 	color: #005C59;
     -webkit-transition: color .2s ease-out,color 1s ease-in;
     transition: color .2s ease-out, color 1s ease-in;
 }
 
-.products_index, .products_show, .sources, .about_summary, nav, footer{
+
+#products, #productID, #sources, #about_summary, nav, footer{
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
-.sources, .about_summary{
+#sources, #about_summary{
 	font-size: 20px;
 }
