--- a/client/public/templates/about.html
+++ b/client/public/templates/about.html
@@ -1,16 +1,20 @@
-<div class='about_summary'>
-    <h1>About</h1>
-        <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used.</p>
-        <p>We all make purchases, some of us on a daily basis. <br>Although the cost per item may seem insignificant, the accumulation of these expenses result in real, <br>sometimes permanent damage to the world around us.</p>
-        <p>This is a community for those who want to analyze and share information regarding the origin and production process of their purchases, as well as the impacts they have on all lives and the resources those beings depend on.</p>
-        <p>Nature provides us with the tools needed to design and produce quality products that are not only affordable, but envrionmentally-restorative and safe for all species.</p>
-</div>
-<br><br>
-    <div class='sources'>
-        <h1>Methodology and Data</h1>
-            <ul>
-                 <li><a href='https://www.opensecrets.org/industries/slist.php'>Basis</a> for sector and industry classifications</li>
-                 <li><a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels Information</a></li>
-             </ul>
-        </div>
+<div class='flex_container' id='about_container'>
+    <div class='flex_item' id='about_summary'>
+        <h2>About</h2>
+            <p>EcoRev allows users to search and filter through sectors and their associated industries and add a product they have used.</p>
+            <p>We all make purchases, some of us on a daily basis. Although the cost per item may seem insignificant, the accumulation of these expenses result in real, sometimes permanent damage to the world around us.</p>
+            <p>This is a community for those who want to analyze and share information regarding the origin and production process of their purchases, as well as the impacts they have on all lives and the resources those beings depend on.</p>
+            <p>Nature provides us with the tools needed to design and produce quality products that are not only affordable, but envrionmentally-restorative and safe for all species.</p>
     </div>
+    <div class='flex_item' id='sources'>
+        <h2>Methodolgy and Data Resources</h2>
+            <ul>
+                <li>
+                    <a href='https://www.opensecrets.org/industries/slist.php'>Sector and industry classifications</a>
+                </li>
+                <li>
+                    <a href='http://www.ecolabelindex.com/ecolabels/'>EcoLabels Information</a>
+                </li>
+            </ul>
+    </div>
+</div>
