--- a/client/public/templates/signUp.html
+++ b/client/public/templates/signUp.html
@@ -1,49 +1,33 @@
-<section class='container'> 
-	<div class='signup_form'>
-		<!-- Register a controller for signup page-->
-		<form id='UserSignup' ng-controller="UsersNewController as newUser" ng-submit="createUser()">
-				<!-- Username -->
-			<table style='width:100%''>
-				<tr>
-					<div class='form labels'>
-						<label for="User-username">Username:</label>
-						<!-- Bind HTML element's value to model. -->
-							<input type="text" class="signup_input" ng-model="newUser.username" placeholder='Your name here'>
-					</div>
-				</tr>
-					<!-- Email -->
-				<tr>
-					<div class='form labels'>
-						<label for="User-email">Email:</label>
-							<input type="text" class="signup_input" ng-model="newUser.email" placeholder='your_email@email.com'>
-					</div>
-				</tr>
-					<!-- Password -->
-				<tr>
-					<div class='form labels'>
-						<label for="User-password">Password:</label>
-							<input type="text" class="signup_input" ng-model="newUser.password" placeholder='password'>
-					</div>
-				</tr>
-					<!-- Location -->
-				<tr>
-					<div class='form labels'>
-						<label for="User-location">Location:</label>
-							<input type="text"  class="signup_input" ng-model="newUser.location" placeholder='Denver, CO'>
-					</div>
-				</tr>
-					<!-- Avatar -->
-				<tr>
-					<div class='form labels'>
-						<label for="User-avatar">Avatar:</label>
-							<input type="text"  class="signup_input" ng-model="newUser.avatar" placeholder='IMG URL'>
-					</div>
-				</tr>
-					<!-- Signup -->
-					<div>
-						<input class="signup_input" type='submit' value='Sign Up!'>
-					</div>
-			</table>
+<!-- Register a controller for signup-->
+<form ng-controller="UsersNewController as newUser" ng-submit="createUser()" class='flexbox_container' id='flex_form'>		
+			<!-- Username -->
+			<div class='flexbox_item' id='form_input'>
+				<label for="User-username">Username:</label>
+					<!-- Bind HTML element's value to model. -->
+					<input type="text" class="form_input" ng-model="newUser.username" placeholder='Your name here'>
+			</div>
+			<!-- Email -->
+			<div class='flexbox_item' id='form_input'>
+				<label for="User-email">Email:</label>
+					<input type="text" class="form_input" ng-model="newUser.email" placeholder='your_email@email.com'>
+			</div>
+			<!-- Password -->
+			<div class='flexbox_item' id='form_input'>
+				<label for="User-password">Password:</label>
+					<input type="text" class="form_input" ng-model="newUser.password" placeholder='password'>
+			</div>
+			<!-- Location -->
+			<div class='flexbox_item' id='form_input'>
+				<label for="User-location">Location:</label>
+					<input type="text"  class="form_input" ng-model="newUser.location" placeholder='Denver, CO'>
+			</div>
+			<!-- Avatar -->
+			<div class='flexbox_item' id='form_input'>
+				<label for="User-avatar">Avatar:</label>
+					<input type="text"  class="form_input" ng-model="newUser.avatar" placeholder='IMG URL'>
+			</div>
+			<!-- Signup -->
+			<div class='flexbox_item' id='button'>
+				<input class="form_input" type='submit' value='Sign Up!'>
+			</div>
 		</form>
-	</div>
-</section>
